# sozune

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  ROADMAP.md  compose.metrics.yaml  compose.test.yaml  config.yaml  docker-compose.yaml  sozune.toml  test-stale-routes.sh
.github/workflows/: ci.yml  deploy-website.yml  release.yml
dashboard/: biome.json  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.html
documentation/: index.md
documentation/advanced/: access-logs.md  debugging.md  health-checks.md  long-polling.md  observability.md  sse.md  websocket.md
documentation/configuration/: api.md  dashboard.md  docker-labels.md  http-provider.md  overview.md  swarm-provider.md
documentation/getting-started/: installation.md  quick-start.md
documentation/middleware/: add-prefix.md  auth.md  backend-timeout.md  circuit-breaker.md  compress.md  error-pages.md  forward-auth.md  headers.md  https-redirect.md  in-flight-req.md  ip-allow-list.md  rate-limit.md  redirects.md  retry.md  strip-prefix.md  wasm-plugins.md
documentation/providers/: consul.md  docker.md  http.md  kubernetes.md  nomad.md  podman.md  ring.md
documentation/routing/: client-ip-matching.md  header-query-matching.md  hostnames.md  load-balancing.md  path-matching.md  tcp.md  udp.md
documentation/tls/: acme.md  overview.md
src/: config.rs  config_load.rs  diagnostics.rs  error_pages.rs  main.rs  to.rs  tracing_otel.rs  util.rs
src/acme/: challenge_server.rs  inventory.rs  mod.rs  resolver.rs
src/api/: auth.rs  config_view.rs  entrypoint.rs  metrics.rs  metrics_server.rs  mod.rs  server.rs
src/cli/: doctor.rs  explain.rs  mod.rs  report.rs  validate.rs
src/config/: config.rs
src/dashboard/: server.rs
src/labels/: candidate.rs  catalog.rs  diagnostic.rs  lint.rs  mod.rs  network.rs  parser.rs  source.rs
src/middleware/: auth.rs  chain.rs  circuit_breaker.rs  compress.rs  diag.rs  forward_auth.rs  headers.rs  in_flight_req.rs  ip_allow_list.rs  mod.rs  proxy.rs  rate_limit.rs  request_match.rs  strip_prefix.rs  wasm.rs
src/model/: entrypoint.rs  mod.rs
src/provider/: config.rs  consul.rs  docker.rs  factory.rs  http.rs  k8s_gateway.rs  kubernetes.rs  mod.rs  nomad.rs  podman.rs  ring.rs  swarm.rs
src/providers/: docker.rs  entrypoint.rs
src/proxy/: backend.rs  health.rs  metrics_snapshot.rs  mod.rs  request_metrics.rs  sozu.rs
tests/e2e/: 01-routing.sh  02-middleware.sh  03-api.sh  04-regex.sh  (+25 more)
tests/e2e/plugins/header-guest/: Cargo.toml
tests/e2e/plugins/header-guest/src/: lib.rs
website/: .gitignore  aplos.config.js  package.json  postcss.config.js  rspack.config.js  tsconfig.json
(+101 files in other folders)
