[package]
name = "sozune"
version = "0.5.0"
authors = ["mlanawo Mbechezi mlanawo.mbechezi@kemeter.io"]
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
axum-server = "0.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

sozu-command-lib = "1.0.6"
sozu-lib = "1.0.6"
anyhow = "1.0.99"
bollard = "0.19.2"
async-trait = "0.1.89"
serde_yaml = "0.9.34+deprecated"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"
notify = "8.2.0"
instant-acme = "0.7"
rcgen = { version = "0.13", features = ["pem"] }
